<resources>
    <string name="app_name">Pokedex</string>

    <string name="create_user_title">Create a new User</string>
    <string name="login_title">Create a new User</string>
    <string name="title_my_pokemons">My pokemons</string>
    <string name="title_all_pokemons">All pokemons</string>
    <string name="title_edit_my_profile">Edit my profile</string>
    <string name="title_logout">Logout</string>

    <string name="button_loggin">Login</string>
    <string name="button_save_post">Save new pokemons</string>
    <string name="button_new_user">Save new user</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_fisrt_name">First name</string>
    <string name="hint_last_name">Last name</string>

    <string name="message_error_fiel_empty">All the fields is required</string>
    <string name="message_error_connection">Has a error with the host</string>
    <string name="authentication_error">We did not find your data, please try again</string>
    <string name="new_user_error">An error occurred while trying to create your user, try again</string>
    <string name="field_error">Please complete all fields before continuing</string>
    <string name="alert_waiting">Please wait …</string>
    <string name="message_success_new_user">Great! Your user has created!</string>
    <string name="messsage_logout">Thank you! For use our app.</string>

    <string name="label_newuser">New user</string>
    <string name="label_pokemon_stat">Pokemon Stat\'s</string>
    <string name="label_name">Name</string>
    <string name="label_type_pokemon">Type of the pokemon</string>
    <string name="label_zeros">00</string>
    <string name="label_pokemon">Pokemon</string>
    <string name="label_stats_speed">Speed</string>
    <string name="label_stats_sdefense">S. Defense</string>
    <string name="label_stats_satack">S. Attack</string>
    <string name="label_stats_defense">Defense</string>
    <string name="label_stats_attack">Attack</string>
    <string name="label_stats_hp">HP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="close">Close</string>
</resources>
